  [Chris Van Houtte]
  * Added `siteclass` as a site parameter, and `reference_site_class` as
    a site parameter than can be specified by the user in the ini file
  * Modified mcverry_2006.py to take siteclass as a predictor
  * Updated mcverry_2006 test tables to account for difference in site
    parameter

  [Michele Simionato]
  * Made the export_dir relative to the input directory
  * Better error message for ShakeMaps with zero stddev
  * Added a source_id-filtering feature in the job.ini
  * Added a check on non-homogeneous tectonic region types in a source group
  * Fixed the option `oq engine --config-file` that broke a few releases ago
  * Replaced `nodal_dist_collapsing_distance` and
     `hypo_dist_collapsing_distance` with `pointsource_distance` and made
     use of them in the classical and event based calculators

  [Graeme Weatherill]
  * Fixes to hmtk completeness tables for consistent rates and addition of
    more special methods to catalogue

  [Michele Simionato]
  * Restricted ChiouYoungs2008SWISS01 to StdDev.TOTAL to avoid a bug
    when computing the GMFs with inter/intra stddevs
  * Raised an error if assets are discarded because too far from the hazard
    sites (before it was just a warning)
  * Added an attribute .srcidx to every event based rupture and stored it
  * Fixed an issue with the Byte Order Mark (BOM) for CSV exposures prepared
    with Microsoft Excel
  * Reduced the site collection instead of just filtering it; this fixes
    a source filtering bug and changes the numbers in case of GMF-correlation
  * Added a command `oq prepare_site_model` to prepare a sites.csv file
    containing the vs30 and changed the engine to use it
  * Added a cutoff when storing a PoE=1 from a CSV file, thus avoiding NaNs
    in classical_damage calculations
  * Reduced the data transfer in the risk model by only considering the
    taxonomies relevant for the exposure
  * Extended `oq engine --run` to accept a list of files