@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<nrml xmlns:gml="http://www.opengis.net/gml"
+      xmlns="http://openquake.org/xmlns/nrml/0.4">
+    <logicTree logicTreeID='lt1'>
+
+        <logicTreeBranchingLevel branchingLevelID="bl1">
+
+            <logicTreeBranchSet uncertaintyType="gmpeModel" branchSetID="bs1"
+                    applyToTectonicRegionType="Active Shallow Crust">
+                <logicTreeBranch branchID="b1">
+ <uncertaintyModel>McVerry2006Asc</uncertaintyModel>
+                    <uncertaintyWeight>1</uncertaintyWeight>
+                </logicTreeBranch>
+            </logicTreeBranchSet>
+
+        </logicTreeBranchingLevel>
+    </logicTree>
+</nrml>
